--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,49 +1,18 @@
-name: CI devops 2025
+name: CD - Docker publish
+
 on:
-  push:
+  workflow_run:
+    workflows: ["CI - Test backend"]  
+    types:
+      - completed
     branches:
       - main
-      - develop
-  pull_request:
-    branches:
-      - main
-      - develop
 
 jobs:
-  test-backend: 
-    runs-on: ubuntu-24.04
-    steps:
-     #checkout your github code using actions/checkout@v4
-      - uses: actions/checkout@v4
-
-     #do the same with another action (actions/setup-java@v4) that enable to setup jdk 21
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
-        with:
-          java-version: '21'
-          distribution: 'temurin'
-
-      #finally build your app with the latest command
-
-      - name: Build and test with Maven
-        working-directory: 'Jour-1/simpleapi'
-        run: mvn clean verify
-
-      - name: SonarCloud Scan
-        working-directory: 'Jour-1/simpleapi'
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn -B verify sonar:sonar -Dsonar.projectKey=Marion-bln_devops-1 -Dsonar.organization=marionbln -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=$SONAR_TOKEN --file ./pom.xml
-
-
-  #Docker 
-  # define job to build and publish docker image
   build-and-push-docker-image:
-    needs: test-backend
-    # run only when code is compiling and tests are passing
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-24.04
 
-    # steps to perform in job
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -80,3 +49,4 @@ jobs:
           # Note: tags has to be all lower-case
           tags:  ${{secrets.DOCKER_USERNAME}}/tp-postgres-httpd:latest
           push: ${{ github.ref == 'refs/heads/main' }}
+
