--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -40,6 +40,9 @@ jobs:
       - name: Build image and push httpd
         uses: docker/build-push-action@v6
         with:
-          context: ./Jour-1/httpd
+          context: ./Jour-1/http-server
           tags: ${{ secrets.DOCKER_USERNAME }}/tp-httpd:latest
           push: true
+
+
+
