--- a/Jour-1/http-server/Dockerfile
+++ b/Jour-1/http-server/Dockerfile
@@ -1,11 +1,3 @@
 FROM httpd:alpine
 
-# Active les modules nécessaires au reverse proxy
-RUN echo "LoadModule proxy_module modules/mod_proxy.so\n\
-LoadModule proxy_http_module modules/mod_proxy_http.so\n\
-\n\
-<VirtualHost *:80>\n\
-    ProxyPreserveHost On\n\
-    ProxyPass / http://backend-api:8080/\n\
-    ProxyPassReverse / http://backend-api:8080/\n\
-</VirtualHost>" > /usr/local/apache2/conf/httpd.conf
+COPY httpd.conf /usr/local/apache2/conf/httpd.conf
