--- a/ansible/roles/proxy/tasks/main.yml
+++ b/ansible/roles/proxy/tasks/main.yml
@@ -1,10 +1,11 @@
 - name: Run Apache HTTP server
   docker_container:
-    name: apache-server
-    image: marionbln/tp-postgres-httpd:latest
+    name: backend-api 
+    image: marionbln/tp-httpd:latest
     state: started
     restart_policy: no
     ports:
       - "80:80"
     networks:
       - name: app-network2
+      - name: app-network
