--- a/ansible/roles/proxy/tasks/main.yml
+++ b/ansible/roles/proxy/tasks/main.yml
@@ -1,11 +1,10 @@
 - name: Run Apache HTTP server
   docker_container:
-    name: backend-api 
-    image: marionbln/tp-httpd:latest
+    name: http-server
+    image: victoireepf/tp-httpd:latest
     state: started
-    restart_policy: no
     ports:
       - "80:80"
     networks:
       - name: app-network2
-      - name: app-network
+
