--- a/Jour-1/http-server/httpd.conf
+++ b/Jour-1/http-server/httpd.conf
@@ -550,11 +550,20 @@ SSLRandomSeed connect builtin
 </IfModule>
 
 
+
 LoadModule proxy_module modules/mod_proxy.so
 LoadModule proxy_http_module modules/mod_proxy_http.so
+LoadModule proxy_html_module modules/mod_proxy_html.so
+LoadModule rewrite_module modules/mod_rewrite.so
 
 <VirtualHost *:80>
   ProxyPreserveHost On
-  ProxyPass / http://backend-api:8080/
-  ProxyPassReverse / http://backend-api:8080/
+
+  # Redirige les appels API vers le backend
+  ProxyPass /api/ http://backend-api:8080/api/
+  ProxyPassReverse /api/ http://backend-api:8080/api/
+
+  # Sert le front (à la racine "/") via le container "front"
+  ProxyPass / http://front/
+  ProxyPassReverse / http://front/
 </VirtualHost>
