--- a/Jour-1/docker-compose.yml
+++ b/Jour-1/docker-compose.yml
@@ -32,21 +32,21 @@ services:
       - "80:80"
     networks:
       - app-network2
+      - app-network3
     depends_on:
       - backend
+      - front
     restart: "no"
 
   front:
     build: ./front
     container_name: front
     restart: always
-    ports:
-      - "8080:80"  # ou autre port si déjà utilisé
     networks:
       - app-network3
     depends_on:
       - backend
-      
+
 
 
 networks:
