--- a/Jour-1/http-server/httpd.conf
+++ b/Jour-1/http-server/httpd.conf
@@ -556,14 +556,27 @@ LoadModule proxy_http_module modules/mod_proxy_http.so
 LoadModule proxy_html_module modules/mod_proxy_html.so
 LoadModule rewrite_module modules/mod_rewrite.so
 
+#<VirtualHost *:80>
+  #ProxyPreserveHost On
+
+  # Redirige les appels API vers le backend
+  #ProxyPass /api/ http://backend-api:8080
+  #ProxyPassReverse /api/ http://backend-api:8080
+
+  # Sert le front (à la racine "/") via le container "front"
+  #ProxyPass / http://front:80
+  #ProxyPassReverse / http://front:80
+#</VirtualHost>
+
+
 <VirtualHost *:80>
   ProxyPreserveHost On
 
-  # Redirige les appels API vers le backend
-  ProxyPass /api/ http://backend-api:8080/api/
-  ProxyPassReverse /api/ http://backend-api:8080/api/
+  # Rediriger /api vers le backend
+  ProxyPass /api http://backend-api:8080/api
+  ProxyPassReverse /api http://backend-api:8080/api
 
-  # Sert le front (à la racine "/") via le container "front"
+  # Rediriger tout le reste vers le front
   ProxyPass / http://front/
   ProxyPassReverse / http://front/
 </VirtualHost>
